[project]
name = "poetry add jupyter-book ipykernel pandas polars altair plotly ghp-import vega-datasets"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Hutahaean",email = "jordanhutahaean87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
